--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+body{
+    /* The image used */
+      background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/Privic.jpg");
+      min-height: 500px;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+  }
 .page-title {
   display: block !important;
   text-align: center;
