--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 body{
     /* The image used */
-      background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/Privic.jpg");
+      /* background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/Privic.jpg");
       min-height: 500px;
       background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: cover; */
+      background-color: #1B1B1B;
   }
 .page-title {
   display: block !important;
