--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body{
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 .page-title {
   display: block !important;
