--- a/src/components/chatroom/css/TextContainer.module.css
+++ b/src/components/chatroom/css/TextContainer.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 100px;
   left: 1170px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 @media (max-width: 1350px) {
