--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@ body{
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      height: 100vh;
+      width: 100vw;
   }
 .page-title {
   display: block !important;
