--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body{
       background-repeat: no-repeat;
       background-size: cover;
       height: 100vh;
-      width: 100vw;
+      max-width: 100vw; 
   }
 .page-title {
   display: block !important;
