--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
-body{
-    /* The image used */
-      background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("/images/Privic.jpg");
-      min-height: 500px;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100vh;
-      max-width: 100vw; 
-  }
+body {
+  /* The image used */
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("/images/Privic.jpg");
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  max-width: 100vw;
+}
 .page-title {
   display: block !important;
   text-align: center;
